  * checks/files.pm:
    + [BR] Detect useless doxygen generated file.  (Closes:  #751945)
  * checks/manpages.desc:
    + [BR] Improve documentation of manpage-has-errors-from-man.
      (Closes: #757068).
  * checks/menu-format.pm:
    + [BR] Fix a false positive in desktop-mime-but-no-exec-code.
      (Closes: #760677).
  * checks/source-copyright.pm:
    + [BR] Fix False positive for space-in-std-shortname-in-dep5-copyright
      with alternative licenses.  (Closes: #760642).
  * checks/testsuite.{desc,pm}:
    + [BR] Fix false positive missing-runtime-tests-field.
      (Closes: #760714).
    + [BR] Print line in case of error.

  * data/fields/metapackages:
    + [BR] Add qt4-default and qt5-default as metapackage.
      (Closes: #756158).

  * lib/Lintian/Check.pm:
    + [BR] Detect package being built as user root.
      (Closes: #612583).

 -- Niels Thykier <niels@thykier.net>  Sat, 06 Sep 2014 11:03:11 +0200

lintian (2.5.26) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - backports-changes-missing
      - backports-upload-has-incorrect-version-number
      - debian-upstream-obsolete-path
      - description-is-pkg-name
      - description-too-short
      - desktop-mime-but-no-exec-code
      - empty-short-license-in-dep5-copyright
      - file-without-copyright-information
      - invalid-escape-sequence-in-dep5-copyright
      - invalid-short-name-in-dep5-copyright
      - license-problem-bad-php-license
      - license-problem-php-license
      - license-problem-undefined-license
      - no-dep5-copyright
      - package-contains-timestamped-gzip
      - pipe-symbol-used-as-license-disjunction
      - privacy-breach-may-use-debian-package
      - source-contains-autogenerated-visual-c++-file
      - space-in-std-shortname-in-dep5-copyright
      - unused-file-paragraph-in-dep5-copyright
      - wildcard-matches-nothing-in-dep5-copyright
    + Removed:
      - copyright-refers-to-bad-php-license