@@ -403,8 +403,16 @@ sub _parse_dep5 {
   LICENSE:
     while ((my $license, $i) = each %short_licenses_seen) {
         if ($license =~ m,\s,) {
-            tag 'space-in-std-shortname-in-dep5-copyright', $license,
-              "(paragraph at line $lines[$i]{'START-OF-PARAGRAPH'})";
+            if($license =~ m,[^ ]+ \s+ with \s+ (.*),x) {
+                my $exceptiontext = $1;
+                unless ($exceptiontext =~ m,[^ ]+ \s+ exception,x) {
+                    tag 'bad-exception-format-in-dep5-copyright', $license,
+                      "(paragraph at line $lines[$i]{'START-OF-PARAGRAPH'})";
+                }
+            }else {
+                tag 'space-in-std-shortname-in-dep5-copyright', $license,
+                  "(paragraph at line $lines[$i]{'START-OF-PARAGRAPH'})";
+            }
         }
         foreach my $bad_short_license ($BAD_SHORT_LICENSES->all) {
             my $value = $BAD_SHORT_LICENSES->value($bad_short_license);
