@@ -1,11 +1,12 @@
-I: source-copyright-dep5-general source: unused-license-paragraph-in-dep5-copyright expat (paragraph at line 49)
+I: source-copyright-dep5-general source: unused-license-paragraph-in-dep5-copyright expat (paragraph at line 89)
 W: source-copyright-dep5-general source: ambiguous-paragraph-in-dep5-copyright paragraph at line 22
+W: source-copyright-dep5-general source: bad-exception-format-in-dep5-copyright gpl-3 with font (paragraph at line 51)
 W: source-copyright-dep5-general source: comma-separated-files-in-dep5-copyright paragraph at line 8
 W: source-copyright-dep5-general source: missing-field-in-dep5-copyright copyright (paragraph at line 15)
 W: source-copyright-dep5-general source: missing-field-in-dep5-copyright license (paragraph at line 12)
-W: source-copyright-dep5-general source: missing-license-paragraph-in-dep5-copyright gpl-3 (paragraph at line 26)
+W: source-copyright-dep5-general source: missing-license-paragraph-in-dep5-copyright gpl-3 (paragraph at line 15)
 W: source-copyright-dep5-general source: missing-license-paragraph-in-dep5-copyright mit (paragraph at line 18)
 W: source-copyright-dep5-general source: missing-license-text-in-dep5-copyright BSD-3 (paragraph at line 22)
-W: source-copyright-dep5-general source: missing-license-text-in-dep5-copyright GPL-3 (paragraph at line 47)
+W: source-copyright-dep5-general source: missing-license-text-in-dep5-copyright GPL-3 (paragraph at line 87)
 W: source-copyright-dep5-general source: obsolete-field-in-dep5-copyright upstream-maintainer upstream-contact (line 3)
 W: source-copyright-dep5-general source: unknown-paragraph-in-dep5-copyright paragraph at line 6
